Changelog
=========

4.3.3 (unreleased)
------------------

- Nothing changed yet.


4.3.2 (2018-01-18)
------------------

- Upgraded to dara schema 4.0. Refs #16169
  [reinhardt]
- Added social media buttons. Refs #16159
  [reinhardt]


4.3.1 (2017-11-16)
------------------

- Added setting for disabling thematic search section. Refs #16044
  [reinhardt]
- Added setting for Chronicon file name prefix. Refs #16093
  [reinhardt]
- Patched pyPdf to fix infinite loop. Refs #16076
  [reinhardt]


4.3.0 (2017-09-21)
------------------

- Added custom logo link that points to navigation root. Refs #15816
  [reinhardt]
- Also index e-book fields. Refs #15676
  [reinhardt]
- Dara-XML: Don't include empty ISBN or relations elements. Refs #15178
  [reinhardt]
- Export: Fixed MemoryError. Refs #15689
  [reinhardt]
- Dynamic portal title in comments viewlet. Refs #15699
  [reinhardt]


4.2.1 (2017-06-12)
------------------

- Allow running export after 6 days. Time between end of export and start of
  next export is always less than 7 days. Refs #15191
  [reinhardt]
- More unicode handling in newsletter. Refs #15075
  [reinhardt]
- Make sure we get all results from solr for the export. Refs  #15191
  [reinhardt]


4.2.0 (2017-03-30)
------------------

- bvid-update: More robust conditions. Refs #14156
  [reinhardt]
- metadata-export: Catch catalog inconsistencies. Refs #14156
  [reinhardt]
- metadat-export: Added 'force' flag. Also commit after deleting timestamp.
  Refs #14156
  [reinhardt]
- Upgrade to c.solr 5 but deactivate atomic updates. Refs #15018
  [reinhardt]
- Added parameter to extend sehepunkte import further into the past.
  Refs #14551
  [reinhardt]
- Sehepunkte: Skip boxes without header. Refs #14551
  [reinhardt]


4.1.2 (2017-01-27)
------------------

- Require specific custom version of collective.solr
  [reinhardt]


4.1.1 (2017-01-27)
------------------

- Changed fields of MissingBVIDExporter, refs #14156
  [reinhardt]