@@ -39,6 +39,13 @@
     permission="cmf.SetOwnProperties"
     />
 
+  <browser:page
+    for="plone.app.layout.navigation.interfaces.INavigationRoot"
+    name="user-information"
+    class=".personalpreferences.RecensioUserDataConfiglet"
+    permission="plone.app.controlpanel.UsersAndGroups"
+    />
+
   <browser:viewlet
     name="plone.app.i18n.locales.languageselector"
     manager="plone.app.layout.viewlets.interfaces.IPortalHeader"
